--- a/webdpract/1.html
+++ b/webdpract/1.html
@@ -75,7 +75,7 @@
         formMessage.textContent = "Form submitted successfully!";
       }
 
-      return isValid; // prevent submit if not valid
+      return isValid; // prevent submit if not valid dsf
     }
   </script>
 
